--- a/porto.css
+++ b/porto.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "BRITANIC";
-  src: url("path/to/BRITANIC.ttf") format("truetype");
+  src: url("/font/BRITANIC.TTF") format("truetype");
 }
 
 html, body {
