--- a/porto.css
+++ b/porto.css
@@ -1,7 +1,8 @@
 @font-face {
   font-family: "BRITANIC";
-  src: url("/font/BRITANIC.TTF") format("truetype");
+  src: url("https://fonts.googleapis.com/css2?family=BRITANIC&display=swap") format("truetype");
 }
+
 
 html, body {
   height: 100%;
