--- a/porto.css
+++ b/porto.css
@@ -1,9 +1,3 @@
-@font-face {
-  font-family: "BRITANIC";
-  src: url("https://fonts.googleapis.com/css2?family=BRITANIC&display=swap") format("truetype");
-}
-
-
 html, body {
   height: 100%;
   margin: 0px;
@@ -170,10 +164,12 @@ main {
   opacity: 1;
 }
 
-
-
+@font-face {
+  font-family: "BRITANIC";
+  src: url("/font/BRITANIC.TTF") format("truetype");
+}
 h1 {
-  font-family: "BRITANNIC", sans-serif;
+  font-family: "BRITANIC", sans-serif;
   font-weight: bold;
   position: absolute;
   top: 50%;
